tests/ui/self/arbitrary_self_types_generic_over_receiver.stderr
error[E0277]: the trait bound `Foo: std::ops::Receiver` is not satisfied
  --> $DIR/arbitrary_self_types_generic_over_receiver.rs:17:9
   |
LL |     foo.a();
   |         ^ the trait `std::ops::Receiver` is not implemented for `Foo`
   |
   = note: required for `Foo` to implement `std::ops::Receiver`
note: required by a bound in `Foo::a`
  --> $DIR/arbitrary_self_types_generic_over_receiver.rs:7:21
   |
LL |     fn a(self: impl Receiver<Target=Self>) -> u32 {
   |                     ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::a`
help: consider borrowing here
   |
LL |     &foo.a();
   |     +
LL |     &mut foo.a();
   |     ++++

error[E0277]: the trait bound `Foo: Deref` is not satisfied
  --> $DIR/arbitrary_self_types_generic_over_receiver.rs:19:9
   |
LL |     foo.b();
   |         ^ the trait `Deref` is not implemented for `Foo`
   |
note: required by a bound in `Foo::b`
  --> $DIR/arbitrary_self_types_generic_over_receiver.rs:10:21
   |
LL |     fn b(self: impl Deref<Target=Self>) -> u32 {
   |                     ^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::b`
help: consider borrowing here
   |
LL |     &foo.b();
   |     +
LL |     &mut foo.b();
   |     ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
